# KR1_QT

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
Controllers/: controller.cpp  controller.h
Models/: audio_task.cpp  audio_task.h  input_task.cpp  input_task.h  main_window.cpp  main_window.h  pick_task.cpp  pick_task.h  task.cpp  task.h
Resources/InputTasks/: EasyInputTasks.txt
